syntax = "proto3";
package com.example.deal.domain;
option java_outer_classname = "DealDomain";

message DealState {
  string dealIdx = 1;
  string createdTimestamp = 2;
  string modifiedTimestamp = 3;
  string lifecycleStatus = 4;
  string brand = 5;
  string changedBy = 6;
  string status = 7;
}

message DealSubmitted {
  string dealIdx = 1;
  string status = 2;
  string modifiedTimestamp = 3;
}

message DealPaid {
  string dealIdx = 1;
  string status = 2;
  string modifiedTimestamp = 3;
}

message DealFulfilled {
  string dealIdx = 1;
  string status = 2;
  string modifiedTimestamp = 3;
}

message DealCancelled {
  string dealIdx = 1;
  string status = 2;
  string modifiedTimestamp = 3;
}